@@ -33,6 +33,11 @@
 FILE *logfile = NULL;
 int verbose = 0;
 
+#if defined(_WIN32) && !defined(__CYGWIN__)
+#define vsnprintf _vsnprintf
+#define snprintf _snprintf
+#endif
+
 /************************************************************************
  *									*
  *		File name and path utilities				*
